[project]
name = "timecloud"
version = "0.1.0"
description = "Animated wordcloud generator with sliding window frequency tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "wordcloud>=1.9.0",
    "Pillow>=10.0.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
timecloud = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
